--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
       "**/typescript",
       "**/typescript/**",
       "**/@types",
-      "**/@types/**"
+      "**/@types/**",
+      "**/@tensorflow",
+      "**/@tensorflow/**",
+      "**/@tensorflow-models",
+      "**/@tensorflow-models/**",
+      "**/@mediapipe",
+      "**/@mediapipe/**"
     ]
   },
   "scripts": {
@@ -45,8 +51,9 @@
     "@types/history": "^4.7.11",
     "@types/jest": "^27.0.3",
     "@types/lodash": "^4.14.182",
-    "@types/node": "^17.0.42",
-    "@types/react": "^18.0.12",
+    "@types/node": "^18.0.0",
+    "@types/offscreencanvas": "2019.7.0",
+    "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "core-js": "2.6.12",
     "cz-lerna-changelog": "^2.0.3",
@@ -67,7 +74,7 @@
     "jest": "27.4.5",
     "lerna": "^4.0.0",
     "postcss": "8.4.14",
-    "prettier": "^2.7.0",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "typescript": "4.7.3"
   }
