--- a/packages/apps/video-processing/package.json
+++ b/packages/apps/video-processing/package.json
@@ -38,22 +38,26 @@
     "@krivega/cancelable-promise": "^0.3.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@tensorflow-models/body-pix": "2.0.5",
-    "@tensorflow-models/posenet": "^2.2.1",
-    "@tensorflow/tfjs-converter": "~1.2.1",
-    "@tensorflow/tfjs-core": "~1.2.1",
+    "@mediapipe/camera_utils": "0.3.1640029074",
+    "@mediapipe/control_utils": "0.6.1629159505",
+    "@mediapipe/drawing_utils": "0.3.1620248257",
+    "@mediapipe/selfie_segmentation": "0.1.1632777926",
+    "@tensorflow-models/body-segmentation": "1.0.1",
+    "@tensorflow/tfjs-backend-webgl": "3.18.0",
+    "@tensorflow/tfjs-converter": "3.18.0",
+    "@tensorflow/tfjs-core": "3.18.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.0",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "repeated-calls": "^0.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "repeated-calls": "^1.3.2",
     "request-animation-runner": "^0.3.2",
     "stats-js": "^1.0.1",
     "styled-components": "^5.3.5",
-    "web-vitals": "^1.0.1",
+    "web-vitals": "^2.1.4",
     "webrtc-adapter": "^8.1.1"
   },
   "devDependencies": {
