--- a/packages/apps/video-processing/package.json
+++ b/packages/apps/video-processing/package.json
@@ -49,6 +49,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.0",
+    "@vinteo/components": "^0.0.0",
+    "@vinteo/mediastream-api": "^0.0.0",
+    "@vinteo/utils": "^0.0.0",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
