refactor(app): move common code to separate modulesrefactor(app): move common code to separate modules

--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,9 @@
 {
   "packages": [
-    "packages/apps/*"
+    "packages/apps/*",
+    "packages/components",
+    "packages/mediastream-api",
+    "packages/utils"
   ],
   "useWorkspaces": true,
   "npmClient": "yarn",
