--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "workspaces": {
     "packages": [
-      "packages/apps/*"
+      "packages/apps/*",
+      "packages/components",
+      "packages/mediastream-api",
+      "packages/utils"
     ],
     "nohoist": [
       "**/webpack-dev-server",
