refactor(app): move system-device to module

--- a/lerna.json
+++ b/lerna.json
@@ -3,6 +3,7 @@
     "packages/apps/*",
     "packages/components",
     "packages/mediastream-api",
+    "packages/system-devices",
     "packages/utils"
   ],
   "useWorkspaces": true,
