--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
       "packages/apps/*",
       "packages/components",
       "packages/mediastream-api",
+      "packages/system-devices",
       "packages/utils"
     ],
     "nohoist": [
