--- a/packages/video-processor/package.json
+++ b/packages/video-processor/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vinteo/utils",
+  "name": "@vinteo/video-processor",
   "version": "0.0.0",
   "private": true,
   "license": "UNLICENSED",
@@ -36,7 +36,20 @@
     }
   },
   "dependencies": {
-    "stats-js": "^1.0.1"
+    "@mediapipe/camera_utils": "0.3.1640029074",
+    "@mediapipe/control_utils": "0.6.1629159505",
+    "@mediapipe/drawing_utils": "0.3.1620248257",
+    "@mediapipe/selfie_segmentation": "0.1.1632777926",
+    "@tensorflow-models/body-segmentation": "1.0.1",
+    "@tensorflow/tfjs-backend-webgl": "3.18.0",
+    "@tensorflow/tfjs-converter": "3.18.0",
+    "@tensorflow/tfjs-core": "3.18.0",
+    "@vinteo/components": "^0.0.0",
+    "@vinteo/mediastream-api": "^0.0.0",
+    "@vinteo/system-devices": "^0.0.0",
+    "@vinteo/utils": "^0.0.0",
+    "lodash": "^4.17.21",
+    "request-animation-runner": "^0.3.2"
   },
   "devDependencies": {
     "lint-staged": "12.1.7"
