--- a/lerna.json
+++ b/lerna.json
@@ -4,6 +4,7 @@
     "packages/components",
     "packages/mediastream-api",
     "packages/system-devices",
+    "packages/video-processor",
     "packages/utils"
   ],
   "useWorkspaces": true,
