--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -35,6 +35,10 @@
       }
     }
   },
+  "dependencies": {
+    "lodash": "^4.17.21",
+    "react": "^18.2.0"
+  },
   "devDependencies": {
     "lint-staged": "12.1.7"
   },
