--- a/packages/apps/video-processing/package.json
+++ b/packages/apps/video-processing/package.json
@@ -40,11 +40,11 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.0",
-    "@vinteo/components": "^0.0.0",
-    "@vinteo/mediastream-api": "^0.0.0",
-    "@vinteo/system-devices": "^0.0.0",
-    "@vinteo/video-processor": "^0.0.0",
-    "@vinteo/utils": "^0.0.0",
+    "@experiments/components": "^0.0.0",
+    "@experiments/mediastream-api": "^0.0.0",
+    "@experiments/system-devices": "^0.0.0",
+    "@experiments/video-processor": "^0.0.0",
+    "@experiments/utils": "^0.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
