--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vinteo/components",
+  "name": "@experiments/components",
   "version": "0.0.0",
   "private": true,
   "license": "UNLICENSED",
