--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vinteo/utils",
+  "name": "@experiments/utils",
   "version": "0.0.0",
   "private": true,
   "license": "UNLICENSED",
