--- a/packages/mediastream-api/package.json
+++ b/packages/mediastream-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vinteo/mediastream-api",
+  "name": "@experiments/mediastream-api",
   "version": "0.0.0",
   "private": true,
   "license": "UNLICENSED",
@@ -37,7 +37,7 @@
   },
   "dependencies": {
     "@krivega/cancelable-promise": "^0.3.0",
-    "@vinteo/utils": "^0.0.0",
+    "@experiments/utils": "^0.0.0",
     "lodash": "^4.17.21",
     "repeated-calls": "^1.3.2"
   },
