--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     ]
   },
   "scripts": {
+    "deps:check": "ncu && lerna run deps:check --stream",
+    "deps:update": "ncu -u && lerna run deps:update --stream && yarn",
     "precommit": "lerna run --concurrency 1 --stream precommit",
     "test": "CI=true yarn test:modules && yarn test:apps && CI=true yarn test:modules:coverage",
     "test:apps": "lerna run test:nowatch --stream --scope user-media-api-test --scope video-processing",
@@ -51,12 +53,12 @@
     "@types/history": "^4.7.11",
     "@types/jest": "^27.0.3",
     "@types/lodash": "^4.14.182",
-    "@types/node": "^18.0.0",
+    "@types/node": "^18.0.6",
     "@types/offscreencanvas": "2019.7.0",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "core-js": "2.6.12",
-    "cz-lerna-changelog": "^2.0.3", 
+    "cz-lerna-changelog": "^2.0.3",
     "eslint": "^8.6.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "17.0.0",
