--- a/packages/apps/video-processing/package.json
+++ b/packages/apps/video-processing/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "build": "react-scripts build",
     "build:stats": "yarn build --stats",
+    "deps:check": "ncu",
+    "deps:update": "ncu -u",
     "format": "prettier --write \"src/**/*.{js,ts,tsx,json}\"",
     "lint": "yarn lint:js && yarn lint:ts",
     "lint:js": "eslint src/. --ext .js,.jsx,.ts,.tsx",
@@ -35,16 +37,16 @@
     }
   },
   "dependencies": {
+    "@experiments/components": "^0.0.0",
+    "@experiments/mediastream-api": "^0.0.0",
+    "@experiments/system-devices": "^0.0.0",
+    "@experiments/utils": "^0.0.0",
+    "@experiments/video-processor": "^0.0.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.2.0",
-    "@experiments/components": "^0.0.0",
-    "@experiments/mediastream-api": "^0.0.0",
-    "@experiments/system-devices": "^0.0.0",
-    "@experiments/video-processor": "^0.0.0",
-    "@experiments/utils": "^0.0.0",
+    "@testing-library/user-event": "^14.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
