--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   "scripts": {
     "deps:check": "ncu && lerna run deps:check --stream",
     "deps:update": "ncu -u && lerna run deps:update --stream && yarn",
+    "lint": "lerna run lint --stream",
+    "lint:js": "lerna run lint:js --stream",
     "precommit": "lerna run --concurrency 1 --stream precommit",
     "test": "CI=true yarn test:modules && yarn test:apps && CI=true yarn test:modules:coverage",
     "test:apps": "lerna run test:nowatch --stream --scope user-media-api-test --scope video-processing",
